[package]
name        = "embd-macros"
description = "Read files or directories from the filesystem at runtime on debug, embed on release."
repository  = "https://github.com/RGBCube/embd-rs"
license     = "MIT"
keywords    = [ "embedding", "files", "debug-optimization", "bundling" ]
categories  = [ "filesystem" ]
authors     = [ "RGBCube" ]
version     = "0.1.4"
edition     = "2021"
include     = [ "src/**/*.rs", "../README.md" ]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1", features = [ "span-locations" ] }
quote       = "1"
syn         = "2"
