[package]
name        = "embd"
description = "Read files or directories from the filesystem at runtime on debug, embed on release."
repository  = "https://github.com/RGBCube/embd-rs"
license     = "MIT"
keywords    = [ "embedding", "files", "debug-optimization", "bundling" ]
categories  = [ "filesystem" ]
authors     = [ "RGBCube" ]
version     = "0.1.2"
edition     = "2021"
include     = [ "src/**/*.rs", "README.md" ]

[dependencies]
embd-macros = "0.1"
