[package]
name        = "embed_macros"
description = "Read files or directories from the filesystem at runtime on debug, embed on release."
repository  = "https://github.com/RGBCube/embed-rs"
license     = "MIT"
keywords    = [ "embedding", "files", "debug-optimization", "bundling" ]
categories  = [ "filesystem" ]
authors     = [ "RGBCube" ]
version     = "0.1.0"
edition     = "2021"

[lib]
proc_macro = true

[dependencies]
proc-macro2 = { version = "1", features = [ "span-locations" ] }
quote       = "1"
syn         = "2"
